Jan 20, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- image loading through gdk-pixbuf (png, jpeg etc.)
- splash screen, logo in $datadir/xqf/pixmaps/xqflogo.png

Jan 03, 2002: Jordi Mallach <jordi@sindominio.net>
- New Danish translation, from Morten Brix Pedersen.

Dec 25, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- added button to scan for maps without restarting xqf
- fixed some minor memleaks
- map scan function for q1, qw, q2 and hl

Dec 19, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to 0.9.11.1

Dec 19, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Changed version back to to 0.9.11 for release with fixes below

Dec 19, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- properly quoted macros for zlib checks
- changed configure argument because help text said --enable-externalrcon while
  it actually was --enable-readline.
- disabled external rcon by default

Dec 18, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to 0.9.11.1

Dec 18, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to 0.9.11

Dec 18, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- update NEWS
- update german translation

Dec 18, 2002: Jordi Mallach <jordi@sindominio.net>
- Updated Catalan and Spanish translations.

Dec 08, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- update configure.in and autogen.sh to match newer automake/autoconf

Dec 07, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- Scan for installed q3, wolfenstein, ut, ut2 and rune maps. Mark not installed
  ones in serverlist

Dec 06, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- Added support for Serious Sam, appropriate qstat config with "SMS" game type
  required

Dec 05, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- display RTCW voteflags like dmflags

Nov 28, 2002: Jordi Mallach <jordi@sindominio.net>
- Updated Catalan and Spanish translations.

Nov 22, 2002: Jordi Mallach <jordi@sindominio.net>
- port Ludwig's setlocale fix to rcon.c.